# webhook-indicator-tradingview

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh
src/: main.py
