[tool.poetry]
name = "webhook-indicator-tradingview"
version = "0.1.0"
description = ""
authors = ["HRNPH <hrnph@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gunicorn = "^21.2.0"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
pydantic = "^2.6.3"
requests = "^2.31.0"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
